--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
   
         - name: Build React app
           run: npm run build
+          working-directory: personal_site
   
         - name: Sync to S3
           run: aws s3 sync build/ s3://$BUCKET_NAME --delete
