--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           working-directory: personal_site
   
         - name: Sync to S3
-          run: aws s3 sync personal_site/build/ s3://$BUCKET_NAME --delete
+          run: aws s3 sync personal_site/build/ s3://${{ secrets.BUCKET_NAME }} --delete
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
