Add skill icons to projects and add title and title icon favicon file

--- a/personal_site/public/manifest.json
+++ b/personal_site/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "John Yao",
+  "name": "Hui Peng John Yao - Personal Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
