--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           run: npm run build
   
         - name: Sync to S3
-          run: aws s3 sync personal_site/build/ s3://${{ secrets.BUCKET_NAME }} --delete
+          run: aws s3 sync build/ s3://${{ secrets.BUCKET_NAME }} --delete
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -38,4 +38,5 @@ jobs:
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_REGION: ${{ secrets.AWS_REGION }}
             DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
+
 
