--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,15 +17,17 @@ jobs:
           uses: actions/setup-node@v3
           with:
             node-version: 18
-  
+            cache: 'npm'
+
         - name: Install dependencies
-          run: npm install
+          run: |
+            npm ci --prefer-offline --no-audit
   
         - name: Build React app
           run: npm run build
   
         - name: Sync to S3
-          run: aws s3 sync personal_site/build/ s3://${{ secrets.BUCKET_NAME }} --delete
+          run: aws s3 sync build/ s3://${{ secrets.BUCKET_NAME }} --delete
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
