--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,12 @@ jobs:
         - name: Set up Node.js
           uses: actions/setup-node@v3
           with:
-            node-version: 18
+            node-version: 20
             cache: 'npm'
 
         - name: Install dependencies
           run: |
-            npm ci --prefer-offline --no-audit
+            npm install
   
         - name: Build React app
           run: npm run build
